--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,8 +1,5 @@
 <h1>EventOnly</h1>
-<%= @events.each do |current_event| %>
+
+<% @events.each do |current_event| %>
   <%= render 'single_event', event: current_event %>
 <% end %>
-
-<p>
-  <%= link_to 'New Event', new_event_path %>
-</p>
