--- a/app/views/events/_single_event.html.erb
+++ b/app/views/events/_single_event.html.erb
@@ -1,4 +1,4 @@
 <div class="event">
   <h3>Name: <%= link_to event.name, event_path(event)  %></h3>
-  <h4><%= event.date %></h4>
+  <%= event.date %>
 </div>
